# hello

load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

configure_make(
    name = "libonigmo",
    lib_source = "@onigmo//:all_srcs",
    configure_in_place = True,
    visibility = ["//visibility:public"],
    env = {"AR": "ar"}
)

cc_binary(
    name = "regextest",
    deps = ["libonigmo"],
    srcs = ["main.c"],
    args = ["-funsigned-char"]
)
